@@ -10,14 +10,17 @@
 
 package org.junit.platform.commons.support;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.platform.commons.support.PreconditionAssertions.assertPreconditionViolationException;
+import static org.junit.platform.commons.support.PreconditionAssertions.assertPreconditionViolationExceptionForString;
 
+import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.net.URI;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Predicate;
@@ -33,22 +36,49 @@ import org.junit.platform.commons.util.ReflectionUtils;
  */
 class ReflectionSupportTests {
 
-	private final Predicate<Class<?>> allTypes = type -> true;
-	private final Predicate<String> allNames = name -> true;
-	private final Predicate<Method> allMethods = name -> true;
+	private static final Predicate<Class<?>> allTypes = type -> true;
+	private static final Predicate<String> allNames = name -> true;
+	private static final Predicate<Method> allMethods = name -> true;
+	private static final Predicate<Field> allFields = name -> true;
+
+	static final String staticField = "static";
+	final String instanceField = "instance";
 
 	@Test
+	@SuppressWarnings("deprecation")
 	void loadClassDelegates() {
 		assertEquals(ReflectionUtils.loadClass("-"), ReflectionSupport.loadClass("-"));
 		assertEquals(ReflectionUtils.loadClass("A"), ReflectionSupport.loadClass("A"));
 		assertEquals(ReflectionUtils.loadClass("java.io.Bits"), ReflectionSupport.loadClass("java.io.Bits"));
 	}
 
+	@Test
+	@SuppressWarnings("deprecation")
+	void loadClassPreconditions() {
+		assertPreconditionViolationExceptionForString("Class name", () -> ReflectionSupport.loadClass(null));
+		assertPreconditionViolationExceptionForString("Class name", () -> ReflectionSupport.loadClass(""));
+	}
+
+	@Test
+	void tryToLoadClassDelegates() {
+		assertEquals(ReflectionUtils.tryToLoadClass("-").toOptional(),
+			ReflectionSupport.tryToLoadClass("-").toOptional());
+		assertEquals(ReflectionUtils.tryToLoadClass("A").toOptional(),
+			ReflectionSupport.tryToLoadClass("A").toOptional());
+		assertEquals(ReflectionUtils.tryToLoadClass("java.io.Bits"), ReflectionSupport.tryToLoadClass("java.io.Bits"));
+	}
+
+	@Test
+	void tryToLoadClassPreconditions() {
+		assertPreconditionViolationExceptionForString("Class name", () -> ReflectionSupport.tryToLoadClass(null));
+		assertPreconditionViolationExceptionForString("Class name", () -> ReflectionSupport.tryToLoadClass(""));
+	}
+
 	@TestFactory
 	List<DynamicTest> findAllClassesInClasspathRootDelegates() throws Throwable {
 		List<DynamicTest> tests = new ArrayList<>();
 		List<Path> paths = new ArrayList<>();
-		paths.add(Paths.get(".").toRealPath());
+		paths.add(Path.of(".").toRealPath());
 		paths.addAll(ReflectionUtils.getAllClasspathRootDirectories());
 		for (Path path : paths) {
 			URI root = path.toUri();
@@ -64,6 +94,17 @@ class ReflectionSupportTests {
 	}
 
 	@Test
+	void findAllClassesInClasspathRootPreconditions() {
+		URI path = Path.of(".").toUri();
+		assertPreconditionViolationException("root",
+			() -> ReflectionSupport.findAllClassesInClasspathRoot(null, allTypes, allNames));
+		assertPreconditionViolationException("class predicate",
+			() -> ReflectionSupport.findAllClassesInClasspathRoot(path, null, allNames));
+		assertPreconditionViolationException("name predicate",
+			() -> ReflectionSupport.findAllClassesInClasspathRoot(path, allTypes, null));
+	}
+
+	@Test
 	void findAllClassesInPackageDelegates() {
 		assertThrows(PreconditionViolationException.class,
 			() -> ReflectionUtils.findAllClassesInPackage("void.return.null", allTypes, allNames));
@@ -75,9 +116,142 @@ class ReflectionSupportTests {
 	}
 
 	@Test
+	void findAllClassesInPackagePreconditions() {
+		assertPreconditionViolationException("package name",
+			() -> ReflectionSupport.findAllClassesInPackage(null, allTypes, allNames));
+		assertPreconditionViolationException("class predicate",
+			() -> ReflectionSupport.findAllClassesInPackage("org.junit", null, allNames));
+		assertPreconditionViolationException("name predicate",
+			() -> ReflectionSupport.findAllClassesInPackage("org.junit", allTypes, null));
+	}
+
+	@Test
 	void findAllClassesInModuleDelegates() {
 		assertEquals(ReflectionUtils.findAllClassesInModule("org.junit.platform.commons", allTypes, allNames),
 			ReflectionSupport.findAllClassesInModule("org.junit.platform.commons", allTypes, allNames));
+	}
+
+	@Test
+	void findAllClassesInModulePreconditions() {
+		PreconditionViolationException exception = assertThrows(PreconditionViolationException.class,
+			() -> ReflectionSupport.findAllClassesInModule(null, allTypes, allNames));
+		assertEquals("Module name must not be null or empty", exception.getMessage());
+		assertPreconditionViolationException("class predicate",
+			() -> ReflectionSupport.findAllClassesInModule("org.junit.platform.commons", null, allNames));
+		assertPreconditionViolationException("name predicate",
+			() -> ReflectionSupport.findAllClassesInModule("org.junit.platform.commons", allTypes, null));
+	}
+
+	@Test
+	void newInstanceDelegates() {
+		assertEquals(ReflectionUtils.newInstance(String.class, "foo"),
+			ReflectionSupport.newInstance(String.class, "foo"));
+	}
+
+	@Test
+	void newInstancePreconditions() {
+		assertPreconditionViolationException("Class", () -> ReflectionSupport.newInstance(null));
+		assertPreconditionViolationException("Argument array",
+			() -> ReflectionSupport.newInstance(String.class, (Object[]) null));
+		assertPreconditionViolationException("Individual arguments",
+			() -> ReflectionSupport.newInstance(String.class, new Object[] { null }));
+	}
+
+	@Test
+	void invokeMethodDelegates() throws Exception {
+		Method method = Boolean.class.getMethod("valueOf", String.class);
+		assertEquals(ReflectionUtils.invokeMethod(method, null, "true"),
+			ReflectionSupport.invokeMethod(method, null, "true"));
+	}
+
+	@Test
+	void invokeMethodPreconditions() throws Exception {
+		assertPreconditionViolationException("Method", () -> ReflectionSupport.invokeMethod(null, null, "true"));
+
+		Method method = Boolean.class.getMethod("toString");
+		PreconditionViolationException exception = assertThrows(PreconditionViolationException.class,
+			() -> ReflectionSupport.invokeMethod(method, null));
+		assertEquals("Cannot invoke non-static method [" + method.toGenericString() + "] on a null target.",
+			exception.getMessage());
+	}
+
+	@Test
+	void findFieldsDelegates() {
+		assertEquals(
+			ReflectionUtils.findFields(ReflectionSupportTests.class, allFields,
+				ReflectionUtils.HierarchyTraversalMode.BOTTOM_UP),
+			ReflectionSupport.findFields(ReflectionSupportTests.class, allFields, HierarchyTraversalMode.BOTTOM_UP));
+		assertEquals(
+			ReflectionUtils.findFields(ReflectionSupportTests.class, allFields,
+				ReflectionUtils.HierarchyTraversalMode.TOP_DOWN),
+			ReflectionSupport.findFields(ReflectionSupportTests.class, allFields, HierarchyTraversalMode.TOP_DOWN));
+	}
+
+	@Test
+	void findFieldsPreconditions() {
+		assertPreconditionViolationException("Class",
+			() -> ReflectionSupport.findFields(null, allFields, HierarchyTraversalMode.BOTTOM_UP));
+		assertPreconditionViolationException("Class",
+			() -> ReflectionSupport.findFields(null, allFields, HierarchyTraversalMode.TOP_DOWN));
+		assertPreconditionViolationException("Predicate",
+			() -> ReflectionSupport.findFields(ReflectionSupportTests.class, null, HierarchyTraversalMode.BOTTOM_UP));
+		assertPreconditionViolationException("Predicate",
+			() -> ReflectionSupport.findFields(ReflectionSupportTests.class, null, HierarchyTraversalMode.TOP_DOWN));
+		assertPreconditionViolationException("HierarchyTraversalMode",
+			() -> ReflectionSupport.findFields(ReflectionSupportTests.class, allFields, null));
+	}
+
+	@Test
+	void tryToReadFieldValueDelegates() throws Exception {
+		Field staticField = getClass().getDeclaredField("staticField");
+		assertEquals(ReflectionUtils.tryToReadFieldValue(staticField, null),
+			ReflectionSupport.tryToReadFieldValue(staticField, null));
+
+		Field instanceField = getClass().getDeclaredField("instanceField");
+		assertEquals(ReflectionUtils.tryToReadFieldValue(instanceField, this),
+			ReflectionSupport.tryToReadFieldValue(instanceField, this));
+	}
+
+	@Test
+	void tryToReadFieldValuePreconditions() throws Exception {
+		assertPreconditionViolationException("Field", () -> ReflectionSupport.tryToReadFieldValue(null, this));
+
+		Field instanceField = getClass().getDeclaredField("instanceField");
+		Exception exception = assertThrows(PreconditionViolationException.class,
+			() -> ReflectionSupport.tryToReadFieldValue(instanceField, null));
+		assertThat(exception)//
+				.hasMessageStartingWith("Cannot read non-static field")//
+				.hasMessageEndingWith("on a null instance.");
+	}
+
+	@Test
+	void findMethodDelegates() throws Exception {
+		assertEquals(ReflectionUtils.findMethod(Boolean.class, "valueOf", String.class.getName()),
+			ReflectionSupport.findMethod(Boolean.class, "valueOf", String.class.getName()));
+
+		assertEquals(ReflectionUtils.findMethod(Boolean.class, "valueOf", String.class),
+			ReflectionSupport.findMethod(Boolean.class, "valueOf", String.class));
+	}
+
+	@Test
+	void findMethodPreconditions() throws Exception {
+		assertPreconditionViolationException("Class",
+			() -> ReflectionSupport.findMethod(null, "valueOf", String.class.getName()));
+		assertPreconditionViolationExceptionForString("Method name",
+			() -> ReflectionSupport.findMethod(Boolean.class, "", String.class.getName()));
+		assertPreconditionViolationExceptionForString("Method name",
+			() -> ReflectionSupport.findMethod(Boolean.class, "   ", String.class.getName()));
+
+		assertPreconditionViolationException("Class",
+			() -> ReflectionSupport.findMethod(null, "valueOf", String.class));
+		assertPreconditionViolationExceptionForString("Method name",
+			() -> ReflectionSupport.findMethod(Boolean.class, "", String.class));
+		assertPreconditionViolationExceptionForString("Method name",
+			() -> ReflectionSupport.findMethod(Boolean.class, "   ", String.class));
+		assertPreconditionViolationException("Parameter types array",
+			() -> ReflectionSupport.findMethod(Boolean.class, "valueOf", (Class<?>[]) null));
+		assertPreconditionViolationException("Individual parameter types",
+			() -> ReflectionSupport.findMethod(Boolean.class, "valueOf", new Class<?>[] { null }));
 	}
 
 	@Test
@@ -91,4 +265,43 @@ class ReflectionSupportTests {
 				ReflectionUtils.HierarchyTraversalMode.TOP_DOWN),
 			ReflectionSupport.findMethods(ReflectionSupportTests.class, allMethods, HierarchyTraversalMode.TOP_DOWN));
 	}
+
+	@Test
+	void findMethodsPreconditions() {
+		assertPreconditionViolationException("Class",
+			() -> ReflectionSupport.findMethods(null, allMethods, HierarchyTraversalMode.BOTTOM_UP));
+		assertPreconditionViolationException("Class",
+			() -> ReflectionSupport.findMethods(null, allMethods, HierarchyTraversalMode.TOP_DOWN));
+		assertPreconditionViolationException("Predicate",
+			() -> ReflectionSupport.findMethods(ReflectionSupportTests.class, null, HierarchyTraversalMode.BOTTOM_UP));
+		assertPreconditionViolationException("Predicate",
+			() -> ReflectionSupport.findMethods(ReflectionSupportTests.class, null, HierarchyTraversalMode.TOP_DOWN));
+		assertPreconditionViolationException("HierarchyTraversalMode",
+			() -> ReflectionSupport.findMethods(ReflectionSupportTests.class, allMethods, null));
+	}
+
+	@Test
+	void findNestedClassesDelegates() throws Exception {
+		assertEquals(ReflectionUtils.findNestedClasses(ClassWithNestedClasses.class, ReflectionUtils::isStatic),
+			ReflectionSupport.findNestedClasses(ClassWithNestedClasses.class, ReflectionUtils::isStatic));
+	}
+
+	@Test
+	void findNestedClassesPreconditions() throws Exception {
+		assertPreconditionViolationException("Class",
+			() -> ReflectionSupport.findNestedClasses(null, ReflectionUtils::isStatic));
+		assertPreconditionViolationException("Predicate",
+			() -> ReflectionSupport.findNestedClasses(ClassWithNestedClasses.class, null));
+	}
+
+	static class ClassWithNestedClasses {
+
+		class Nested1 {
+		}
+
+		static class Nested2 {
+		}
+
+	}
+
 }
